k8s/app/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-sql-volume
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
      volumes:
        - name: init-sql-volume
          configMap:
            name: postgres-init-sql
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
