k8s/app/wildfly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wildfly
  template:
    metadata:
      labels:
        app: wildfly
    spec:
      containers:
        - name: wildfly
          image: ghcr.io/tassis1/mediatheque-wildfly:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: wildfly-logs 
              mountPath: /opt/jboss/wildfly/standalone/log
      volumes:
        - name: wildfly-logs  
          persistentVolumeClaim:
            claimName: wildfly-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wildfly-service
spec:
  selector:
    app: wildfly
  ports:
    - port: 8080
      targetPort: 8080
