k8s/app/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /mediatheque-api/api/$2
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - mediatheque.local
      secretName: mediatheque-tls

  rules:
    - host: mediatheque.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wildfly-service
                port:
                  number: 8080
