k8s/app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - mediatheque.local
      secretName: mediatheque-tls

  rules:
    - host: mediatheque.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
